Fix date overflow

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -103,6 +103,7 @@ p > img {
     text-align: right;
     font-size: small;
     margin-left: auto;
+    overflow: hidden;
 }
 
 #socials {
